--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,11 +10,9 @@ Description: This package contains functions and S3 methods for spatial
     Bugs/comments/questions/collaboration of any kind are warmly welcomed.
 Version: 1.0
 Repository: CRAN
-Date/Publication: 2011-08-12 14:30:10
-Packaged: 2011-08-12 07:38:22 UTC; ecor
-Date: 2012-01-17
+Date: 2014-04-01
 Depends:
-    R (>= 2.13),
+    R (>= 3.0),
     copula,
     RGENERATE,RMAWGEN,blockmatrix,Matrix
-URL: NA
+URL: https://github.com/ecor/RMRAINGEN
