--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,11 +6,12 @@ Title: RMRAINGEN (R Multi-site RAINfall GENeretor): a
 Type: Package
 Author: Emanuele Cordano
 Description: This package contains functions and S3 methods for spatial
-    multi-site stochastic generation of daily precipitation.
+    multi-site stochastic generation of daily precipitation. It generates
+    precipitation occurrence in several sites using Wilks' Approach (1998).
     Bugs/comments/questions/collaboration of any kind are warmly welcomed.
 Version: 1.0
 Repository: CRAN
-Date: 2014-04-01
+Date: 2014-07-22
 Depends:
     R (>= 3.0),
     copula,
