--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(CCGamma)
 export(CCGammaToBlockmatrix)
 export(CoeffYWeq)
 export(TransitionMatrixMCFirstOrder)
+export(WilksGaussianization)
 export(dw.spell)
 export(fitdistrForPrecipitation)
 export(generatePrecipitationAmount)
