--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@ S3method(generate,CCGammaObject)
 S3method(generate,CCGammaObjectListPerEachMonth)
 S3method(generate,YuleWalkerCoefficientBlockmatrices)
 S3method(generate,YuleWalkerCoefficientBlockmatricesPerEachMonth)
+S3method(generate,blockmatrix)
 export(CCGamma)
 export(CCGammaToBlockmatrix)
 export(CoeffYWeq)
